# ChangeLog for app-vim/easy-align
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-vim/easy-align/ChangeLog,v 1.1 2013/09/28 01:46:12 radhermit Exp $

*easy-align-2.5.1 (28 Sep 2013)

  28 Sep 2013; Tim Harder <radhermit@gentoo.org> +easy-align-2.5.1.ebuild,
  +metadata.xml:
  Initial import.
