@@ -2,17 +2,19 @@
 Hash: SHA256
 
 DIST easy-align-2.5.1.tar.gz 13019 SHA256 8a441063b8926c7b5d29027624af61a5a1e6a6759fa6752e1429a0ded961ab14 SHA512 d8ac03f8fbd40eef7dc2c31e5460db2c540b8ea766146e89f9a6cf97e0fafece8dec411a8139e64bf8921e453c937a0e02c6935a22d89088da547b03b4baacdb WHIRLPOOL 7e4c28bf3f6e7f94199e9da9a5052766d8311f2e9a1d51fe09b3f541ce8c4ff0935daddde0eee90dfcce1cf9683a454d1794e708e2489f8eb94acfa5df3d5f15
+DIST easy-align-2.6.0.tar.gz 13845 SHA256 331229a2ea13de6c51fc38899efec4228394a2924816c35194f7c650ff7b0c70 SHA512 b04e9eed5c5ad5c448c45c2567ba82dfd669cf009d2b3105b5bac4d26637e1d6e5a0c071dde22dfbb8a5ba2f2085b4386055384ec63f1042d1d0171dabf3bb0a WHIRLPOOL e8e3f13b5f04fcd4cf60a1e2d7a65e6a26694ecd9f111f43f7a6801fd80eb8cf49d7aa71e1f8f2c37ba023a05fee05c3e6780b046234bee0df1a09dbd17c5376
 EBUILD easy-align-2.5.1.ebuild 671 SHA256 57b852883c06abab7805fe6a1ecf04d82517291d4591b69daad475ec10b7610c SHA512 0dc2c1a889cda6debf74b387d7e86cfaa7fa416716d3a64ddcd24fc36093ac8c1b0f59c2b8c13a021e2078e32d0c5305087d9c018cb0639189c22343510c8339 WHIRLPOOL 3af293fbd50cbc8bd2d57a91ab9fd93a71a6b8b4ce55f0ae04b615396ec1e603fd34016ffb5a5f995c06aade28e41670212a5374628e150c0411928a8419c912
-MISC ChangeLog 356 SHA256 ac486c405aad002726f177b5d84c4f7db53b41b095b5f38f075fb8e557c98a3f SHA512 b4d3b47d6b86f4452e1002aec88eb6088673f79995a73f85101a4d9dd65bc4200f33d0b090d20ac57bb8abe38f3643c8c296889b852de2535ab0d79a46c1d83e WHIRLPOOL f594efbdcc5162a742e44b61d149a4dcc94e81e1e3ece03869f96e43da9a14ff7ceb8171e9cb535f55244dd2b32abdac64a0cef7fbd75194c17913dc66ff9738
+EBUILD easy-align-2.6.0.ebuild 671 SHA256 8d3e7a4bfdb54c95a99737a31c99fde3421ba463d0dfe7703df396dbec02ab4f SHA512 aa7a9994b5734cca5a3e51ae348af16874008f285667090c3a1e4215b7f80c4d084de65c0129169ab19ce775aadb462f3b0b5785ffff2b607a3c53639c1eae41 WHIRLPOOL 88af73f5217c30bd114b72295008f4b7bcbb8770f6f3ef89f44dba1d78df0af7123b67a8643bef0aa58f689870e269c150091574108f583956738eecf0e8bac2
+MISC ChangeLog 481 SHA256 f731585b8aa1402ad4cd58be763d403e32e69954d05abc9659ee651ab759122f SHA512 2ae605c7931dcf300238652856e36b6767d12f6593ec01ca205f40c8352cd8f79f01f173c0f1dad165afcf8ecfd9cfbb75a2f2a4e81dff5069c93ea4a76e12aa WHIRLPOOL f81d0ef48ebb34b1c21de252423426a0229e81149e1198b9059235261394ae07017ce8ae45a9efcf956530449190c43f194a47936c9c5b0411b684353cdfdcfd
 MISC metadata.xml 156 SHA256 64d20c782589b423a6e75ba6fff7edead1ec8fbae742d27dd57f5299e8328500 SHA512 7dc1d902106e794e1a12bde5dcacb8b7143584cba9c61e72ac5728dd952663144c1b0efc949fbbc9fcec03b396b5e060e8263eaad7d70cd82d6d5b350c62f0c1 WHIRLPOOL 4381a5d144e783e5979d394720b32f7d95818a8571f748e72c5ece965c4e0375b1aec0c34f6f506a9f9fc255f1b69a220fdb74d1dbb8aabc92ec48afa44ab883
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.21 (GNU/Linux)
 
-iQEcBAEBCAAGBQJSRjToAAoJEEqz6FtPBkyj46MH/3NGxRuv3nXiJ3rlZ0ZLjbf0
-96J532mlA149yDGVStTYkSjrUSuhnriajDNYKZNtsX3HtbK69ZEfqoy7pdN5G3zf
-7+Ky3QowsJN7eKaqEzkmMIbMHfiA9rrUAlr7rLgIc3uvDLJBcCSbxHjJm6sQRKWN
-guoMGky1bPINoZ3GzUQsBvVcvT1fYW6U5MYEU5H8KTVWL6QV68RZWfdkWW/ipROL
-eOtrlqZwqH/mDNvM3xOdiTZ4MiX075KV0hPFGVobZ44Uo5Cr+ArY07PxShfMiAN+
-Woqk0s4QD60fXx70HlUc20SPEy4PHI2F1ecDZfLF0tHsx10UXWSwTgL3K3xakrM=
-=jyFe
+iQEcBAEBCAAGBQJSUO4sAAoJEEqz6FtPBkyjpjkH/12tUFlQ0r+xac0jmTMOCa3n
+psquhsMjMvReIMINU8GNGJ6k+17Zyti2xdHCYU73h2XR0QtB1cpeXxHpWH4HSE5j
+A0SxTmcWN6ntTYSe6+bWY7eJmy9Qu3iNXHL1GP7AJLABZdl/FjML5WptJ0NRhLvq
+BtV6+ybBHnFTcemTuRHGU65SlpxDRANrsay3SCUyyWwDYd6vWYLUIs2HeCKZ21hO
+e1/DjgyNJ1iiewVoi7TzQxMK29csa8PdpQ6Pc+wx77C94DolP1svWS43ECuNnuyr
+WcBd/ONvvYEcRrdVzQo4HPg07JGlKFbRD/Ns0ky06esAPiUCfpcChXYApq0yaCs=
+=pAV8
 -----END PGP SIGNATURE-----
