@@ -1,0 +1,12 @@
+DEFINED_PHASES=install postinst postrm prepare
+DEPEND=|| ( >=app-editors/vim-7.3 >=app-editors/gvim-7.3 )
+DESCRIPTION=vim plugin: a simple alignment plugin
+EAPI=5
+HOMEPAGE=https://github.com/junegunn/vim-easy-align http://www.vim.org/scripts/script.php?script_id=4520
+KEYWORDS=~amd64 ~x86
+LICENSE=MIT
+RDEPEND=|| ( >=app-editors/vim-7.3 >=app-editors/gvim-7.3 )
+SLOT=0
+SRC_URI=https://github.com/junegunn/vim-easy-align/archive/2.6.0.tar.gz -> easy-align-2.6.0.tar.gz
+_eclasses_=vim-doc	1c18baeec98cec3287524cbf2fee2bd2	vim-plugin	286547e90fbbc4c841eee80cd73e646c
+_md5_=50b50804ab28561685a9c47edadeb736
