@@ -1,6 +1,11 @@
 # ChangeLog for app-vim/easy-align
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-vim/easy-align/ChangeLog,v 1.1 2013/09/28 01:46:12 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-vim/easy-align/ChangeLog,v 1.2 2013/10/06 04:59:18 radhermit Exp $
+
+*easy-align-2.6.0 (06 Oct 2013)
+
+  06 Oct 2013; Tim Harder <radhermit@gentoo.org> +easy-align-2.6.0.ebuild:
+  Version bump.
 
 *easy-align-2.5.1 (28 Sep 2013)
 
